# Bio-Molecular-Explorer

./: .gitignore  .zenodo.json  BIO-MOLECULAR-EXPLORER-RENAME-STARTUP-PROMPT.md  CITATION.cff  HANDOFF-TO-ORCHESTRATOR.md  HANDOFF-TO-OVERNIGHT-EXECUTOR.md  MANIFEST.in  MODUS-OPERANDI.md  ORCHESTRATOR-STARTUP-PROMPT.md  OVERNIGHT-EXECUTOR-STARTUP-PROMPT.md  PATHWAY1_PRD.md  PRD.md  README.md  pyproject.toml  runpod.config.yaml
.github/workflows/: ci.yml  publish.yml
briefing-pack/: 01-scope-and-boundary.md  02-scientific-charter.md  03-inherited-from-brain.md  04-current-thinking.md  05-open-questions.md  06-evidence-and-data-map.md  Pathway1_RD_DrugDiscovery_PRD_Research.md  README.md
docs/: BIO_MOLECULAR_EXPLORER_RENAME_PRD.md  CONVENTIONS.md  CURRENT_PUBLIC_STATUS.md  DECISIONS.md  H100_COMPLETION_PLAN.md  RUNPOD_READINESS.md  execution-report.md  runpod-migration.md
fixtures/compounds/: diltiazem.json  dofetilide.json  lidocaine.json  mexiletine.json  moxifloxacin.json  quinidine.json  ranolazine.json  sotalol.json  verapamil.json
fixtures/morphology/: _README.md  diltiazem.json  dofetilide.json  lidocaine.json  mexiletine.json  moxifloxacin.json  quinidine.json  sotalol.json  (+2 more)
kg/: cardiac_seed.jsonl  pathway1_seed.jsonl
packets/: cardiac_evidence_packet_v0_1__dofetilide.json  cardiac_evidence_packet_v0_1__ranolazine.json  cardiac_evidence_packet_v0_1__verapamil.json  summary.json
runtime/: cloud_lab.config.yaml
scripts/: generate_cardiac_packets.py
source-briefs/: 01-full-technology-landscape.md  02-corrections-and-architecture.md
synthesis/: 01-fresh-eyes-on-pipeline-briefs.md
(+331 files in other folders)
